Saved 2022年 7月 6日 星期三 21时00分04秒 CST

--- a/读书笔记/数据密集型应用系统设计/9. 一致性与共识(1).md
+++ b/读书笔记/数据密集型应用系统设计/9. 一致性与共识(1).md
@@ -1,5 +1,7 @@
 # 可线性化（Linearizability）
 
+如果数据库能够对上提供只有单个副本的假象，情况会不会大为简化呢？这样让每个客户端都拥有相同的数据视图，而不必担心复制滞后。这就是==可线性化==（也称为==原子一致性==，强一致性等）的思想。==其基本的想法是让一个系统看起来好像只有一个数据副本，且所有的操作都是原子的==。有了这个保证，应用程序就不需要关心系统内部的多个副本。
+
 在一个可线性化的系统中，一旦某个客户端成功提交写请求，所有客户端的读请求一定都能看到刚刚写入的值。这种看似单一副本的假象意味着它可以保证读取最近最新值，而不是过期的缓存。换句话说，可线性化是一种就近的保证。为了解释该想法，我们先来看一个非线性化系统的例子。
 
 ![image-20220125224843269](https://littleneko.oss-cn-beijing.aliyuncs.com/img/image-20220125224843269.png)
@@ -118,6 +120,12 @@
 
 * 如果应用要求线性化，但由于网络方面的问题，某些副本与其他副本断开连接之后无法继续处理请求，就必须等待网络修复，或者直接返回错误。无论哪种方式，结果是服务不可用。
 * 如果应用不要求线性化，那么断开连接之后，每个副本可独立处理请求例如写操作（多主复制）。此时，服务可用，但结果行为不符合线性化。
+
+>CAP有时也代表一致性，可用性，分区容错性，系统只能支持其中两个特性。不过，这种理解存在误导性，网络分区是一种故障， 不管喜欢还是不喜欢，它都可能发生，所以无法选择或逃避分区的问题。
+>
+>在网络正常的时候，系统可以同时保证一致性（线性化）和可用性。而一旦发生了网络故障，必须要么选择线性（一致性），要么可用性。因此，更准确的称呼应该是 “==网络分区情况下，选择一致还是可用=="。 高可靠的网络会帮助减少发生的概率，但无法做到彻底避免。
+
+正式定义的 CAP 定理范围很窄， 它只考虑了一种一致性模型（即线性化）和一种故障（网络分区，节点仍处千活动状态但相互断开），而没有考虑网络延迟、节点失败或其他需要折中的情况。因此，尽管 CAP 在历史上具有重大的影响力，但对于一个具体的系统设计来说，它可能没有太大的实际价值。
 
 ### 可线性化与网络延迟
 
