Saved 2022年 7月 7日 星期四 20时34分51秒 CST

--- a/读书笔记/数据密集型应用系统设计/9. 一致性与共识(1).md
+++ b/读书笔记/数据密集型应用系统设计/9. 一致性与共识(1).md
@@ -219,6 +219,8 @@ Lamport 时间戳与物理墙上时钟并不存在直接对应关系，但它可
 
 只要把最大计数器值嵌入到每一个请求中，该方案可以确保 Lamport 时间戳与因果关系一致，而请求的因果依赖性一定会保证后发生的请求得到更大的时间戳。
 
+Lamport 时间戳有时会与版本向噩发生混淆（第 5 章 “检测并发写“ 中介绍了版本向量)。虽然存在一些相似之处，但它们的目的不同：版本向量用以区分两个操作是并发还是因果依赖，而 Lamport 时间戳则主要用千确保全序关系。即使 Lamport 时间戳与因果序一致，但根据其全序关系却无法区分两个操作属并发发关系， 还是因果依赖关 系。Lamport 时间戳优于版本向显之处在于它更加紧凑和高效。
+
 ### 时间戳排序依然不够
 
 虽然 Lamport 时间戳定义了与因果序一致的全序关系，但还不足以解决实际分布式系统中许多常见的问题。
@@ -255,6 +257,8 @@ Lamport 时间戳与物理墙上时钟并不存在直接对应关系，但它可
 可以使用全序关系广播来实现可串行化事务。如第 7 章 "实际串行执行" 所述，如果每条消息表示一个确定性事务并且作为存储过程来执行，且每个节点都遵从相同的执行顺序，那么可以保证数据库各分区以及各副本之间的一致性。
 
 ==全序关系广播另一个要点是顺序在发送消息时已经确定，如果消息发送成功，节点不允许追溯地将某条消息插入到先前的某个位置上==。这一点使得全序关系广播比基于时间戳排序要求更强。
+
+理解全序关系广播的另一种方式是将其视为日志（如复制日志，事务日志或预写日志），传递消息就像追加方式更新日志。由于所有节点必须以相同的顺序发送消息，因此所有节点都可以读取日志并看到相同的消息序列。
 
 全序关系广播对于提供 fencing 令牌的锁服务也很有用（参阅第 8 章的 "Fencing 令牌"）。每个获取锁的请求都作为消息附加到日志中，所有消息按照日志中的顺序依次编号。序列号还可以作为令牌，它符合单调递增要求。在 ZooKeeper 中，该序列号被称为 zxid。
 
