delete github action

--- a/读书笔记/数据密集型应用系统设计/1. 可靠、可扩展与可维护的应用系统.md
+++ b/读书笔记/数据密集型应用系统设计/1. 可靠、可扩展与可维护的应用系统.md
@@ -3,12 +3,15 @@
  本书将专注于对大多数软件系统都极为重要的三个问题：
 
 * **可靠性（Reliability）**
-  当出现意外情况如硬件、 软件故障、 人为失误等，系统应可以继续正常运转：虽然性能可能有所降低，但确保功能正确。 
-
+  
+  当出现意外情况如硬件、 软件故障、 人为失误等，系统应可以继续正常运转，虽然性能可能有所降低，但确保功能正确。 
+  
 * **可扩展性（Scalability）**
+  
   随着规模的增长，例如数据量 、流量或复杂性，系统应以合理的方式来匹配这种增长。
-
+  
 * **可维护性（Maintainability）**
+
   随着时间的推移，许多新的人员参与到系统开发和运维，以维护现有功能或适配新场景等，系统都应高效运转。
 
 ## 可靠性
@@ -60,8 +63,7 @@
 
 ```sql
 SELECT tweets.*, users.* FROM tweets
-JOIN users ON tweets.sender_id
- = users.id
+JOIN users ON tweets.sender_id = users.id
 JOIN follows ON follows.followee_id = users.id
 WHERE follows.follower_id = current_user
 ```
