--- a/读书笔记/数据密集型应用系统设计/5.2. 数据复制(2).md
+++ b/读书笔记/数据密集型应用系统设计/5.2. 数据复制(2).md
@@ -111,14 +111,24 @@ Dynamo 风格的数据存储系统经常使用以下两种机制：
 
 * 如果采用了 sloppy quorum（参阅本章后面的宽松的 quorum 与数据回传），写操作的 w 节点和读取的 r 节点可能完全不同，因此无法保证读写请求一定存在重叠的节点。
 * ==如果两个写操作同时发生，则无法明确先后顺序==。这种情况下，唯一安全的解决方案是合并并发写入（参见本章前面的 “处理写冲突”）。如果根据时间戳（最后写入获胜）挑选胜者，则由于时钟偏差问题，某些写入可能会被错误地抛弃。
-* ==如果写操作与读操作同时发生，写操作可能仅在一部分副本上完成。此时，读取时返回旧值还是新值存在不确定性==。
-* ==如果某些副本上已经写入成功，而其他一些副本发生写入失败（例如磁盘已满），且总的成功副本数少于 w，那些已成功的副本上不会做回滚。这意味着尽管这样的写操作被视为失败，后续的读操作仍可能返回新值。==
+* ==如果写操作与读操作同时发生，写操作可能仅在一部分副本上完成。此时，读取时返回旧值还是新值存在不确定性。== (3)
+* ==如果某些副本上已经写入成功，而其他一些副本发生写入失败（例如磁盘已满），且总的成功副本数少于 w，那些已成功的副本上不会做回滚。这意味着尽管这样的写操作被视为失败，后续的读操作仍可能返回新值。== (4)
 * 如果具有新值的节点后来发生失效，但恢复数据来自某个旧值，则总的新值副本数会低于 w，这就打破了之前的判定条件。
 * 即使一切工作正常，也会出现一些边界情况，如第 9 章所介绍的 “可线性化与 quorum”。
 
 因此，虽然 quorum 设计上似乎可以保证读取最新值，但现实情况却往往更加复杂。Dynamo 风格的数据库通常是针对==最终一致性==场景而优化的。
 
 ==这里通常无法得到本章前面的 “复制滞后问题” 中所罗列的一致性保证，包括写后读、单调读、前缀一致读等，因此前面讨论种种异常同样会发生在这里。==
+
+> **Tips**:
+>
+> 上面 (3) (4) 两种情况都存在的一个问题：如何确定最高版本号是已经成功提交的数据？在本书中，处理方法是读的时候不去判断，只返回最新的数据即可。实际上如果要判断的话，需要继续读其他的副本，直到读到的最高版本号副本出现了 w 次，但这种方法已经违背了 Quorum 的初衷。
+>
+> 我们下面的讨论也都是基于读的时候只返回读到的最新数据。
+>
+> * 写后读：TODO
+> * 单调读：TODO
+> * 前缀一致性读：TODO
 
 ### 监控旧值
 
