Saved @ 2023年 2月 6日 星期一 16时00分32秒 CST

--- a/数据库/数据库学习资料.md
+++ b/数据库/数据库学习资料.md
@@ -1,67 +1,76 @@
-https://github.com/pingcap/awesome-database-learning
+PingCAP, Awesome Database Learning: https://github.com/pingcap/awesome-database-learning
 
-How do we build TiDB: https://pingcap.com/zh/blog/how-do-we-build-tidb
+PingCAP, How do we build TiDB: https://pingcap.com/zh/blog/how-do-we-build-tidb
 
 # 事务
 
-TiDB 事务隔离级别: https://docs.pingcap.com/zh/tidb/dev/transaction-isolation-levels#tidb-%E4%BA%8B%E5%8A%A1%E9%9A%94%E7%A6%BB%E7%BA%A7%E5%88%AB
-
-事务前沿研究 | 隔离级别的追溯与究明，带你读懂 TiDB 的隔离级别（上篇）: https://pingcap.com/zh/blog/take-you-through-the-isolation-level-of-tidb-1
-
-事务前沿研究 | 隔离级别的追溯与究明，带你读懂 TiDB 的隔离级别（下篇）: https://pingcap.com/zh/blog/take-you-through-the-isolation-level-of-tidb-2
-
-**事务前沿研究丨事务并发控制**: https://pingcap.com/zh/blog/transaction-frontiers-research-article-talk4
-
-TiKV 的 MVCC（Multi-Version Concurrency Control）机制: https://pingcap.com/zh/blog/mvcc-in-tikv
-
-Large Transactions in TiDB: https://www.pingcap.com/blog/large-transactions-in-tidb/?from=en
-
-**TiKV 事务模型概览，Google Spanner 开源实现**: https://pingcap.com/zh/blog/tidb-transaction-model
-
-Percolator 和 TiDB 事务算法: https://pingcap.com/zh/blog/percolator-and-txn
-
-Optimized Percolator: https://tikv.org/deep-dive/distributed-transaction/optimized-percolator/
-
-**Async Commit 原理介绍丨 TiDB 5.0 新特性**: https://pingcap.com/zh/blog/async-commit-principle
-
-TiDB 5.0 两阶段提交: https://tidb.net/blog/f05fe253?utm_source=tidb-community&utm_medium=referral&utm_campaign=repost
+* 1995, [A Critique of ANSI SQL Isolation Levels](https://www.microsoft.com/en-us/research/wp-content/uploads/2016/02/tr-95-51.pdf), SIGMOD
+* Peng D, Dabek F. [Large-scale incremental processing using distributed transactions and notifications](https://www.usenix.org/legacy/event/osdi10/tech/full_papers/Peng.pdf)[J]. 2010. (Google Percolator)
+* CMU-15-445/645, [Lecture #16: Concurrency Control Theory](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#oct-28-2020)
+* CMU-15-445/645, [Lecture #17: Two-Phase Locking Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-02-2020)
+* CMU-15-445/645, [Lecture #18: Timestamp Ordering Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-04-2020)
+* CMU-15-445/645, [Lecture #19: Multi-Version Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-09-2020)
+* CMU-15-721, [Multi-Version Concurrency Control (Design Decisions)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-22-2020)
+* CMU-15-721, [Multi-Version Concurrency Control (Protocols)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-27-2020)
+* CMU-15-721, [Multi-Version Concurrency Control (Garbage Collection)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-29-2020)
+* [**一致性模型**](https://www.jianshu.com/p/3673e612cce2), [siddontang](https://www.jianshu.com/u/1yJ3ge) @简书
 
 
 
+* PingCAP Doc, [TiDB 事务隔离级别](https://docs.pingcap.com/zh/tidb/dev/transaction-isolation-levels#tidb-%E4%BA%8B%E5%8A%A1%E9%9A%94%E7%A6%BB%E7%BA%A7%E5%88%AB)
+* PingCAP, [事务前沿研究 | 隔离级别的追溯与究明，带你读懂 TiDB 的隔离级别（上篇）](https://pingcap.com/zh/blog/take-you-through-the-isolation-level-of-tidb-1)
 
-TiDB 乐观事务模型: https://docs.pingcap.com/zh/tidb/dev/optimistic-transaction
+* PingCAP, [事务前沿研究 | 隔离级别的追溯与究明，带你读懂 TiDB 的隔离级别（下篇）](https://pingcap.com/zh/blog/take-you-through-the-isolation-level-of-tidb-2)
 
-**TiDB 最佳实践系列（三）乐观锁事务**: https://pingcap.com/zh/blog/best-practice-optimistic-transaction
+* PingCAP, [**事务前沿研究丨事务并发控制**](https://pingcap.com/zh/blog/transaction-frontiers-research-article-talk4)
+* PingCAP, [TiKV 的 MVCC（Multi-Version Concurrency Control）机制](https://pingcap.com/zh/blog/mvcc-in-tikv)
 
-TiDB 悲观事务模式: https://docs.pingcap.com/zh/tidb/dev/pessimistic-transaction
+* PingCAP, [Large Transactions in TiDB](https://www.pingcap.com/blog/large-transactions-in-tidb/?from=en)
 
-TiDB 新特性漫谈：悲观事务: https://pingcap.com/zh/blog/pessimistic-transaction-the-new-features-of-tidb
+* PingCAP, [**TiKV 事务模型概览，Google Spanner 开源实现**](https://pingcap.com/zh/blog/tidb-transaction-model)
+* PingCAP, [Percolator 和 TiDB 事务算法](https://pingcap.com/zh/blog/percolator-and-txn)
 
-TiDB 4.0 新特性前瞻（二）白话“悲观锁”: https://pingcap.com/zh/blog/tidb-4.0-pessimistic-lock
+* PingCAP, [Optimized Percolator](https://tikv.org/deep-dive/distributed-transaction/optimized-percolator/)
 
-**TiDB 悲观锁实现原理**: https://tidb.net/blog/7730ed79
+* PingCAP, [**Async Commit 原理介绍丨 TiDB 5.0 新特性**](https://pingcap.com/zh/blog/async-commit-principle)
+* PingCAP, [TiDB 5.0 两阶段提交](https://tidb.net/blog/f05fe253?utm_source=tidb-community&utm_medium=referral&utm_campaign=repost)
 
-TiKV 源码解析系列文章（十一）Storage - 事务控制层: https://pingcap.com/zh/blog/tikv-source-code-reading-11
 
-TiKV 源码解析系列文章（十二）分布式事务: https://pingcap.com/zh/blog/tikv-source-code-reading-12
+
+
+* 
+  PingCAP Doc, [TiDB 乐观事务模型](https://docs.pingcap.com/zh/tidb/dev/optimistic-transaction)
+
+* PingCAP, [**TiDB 最佳实践系列（三）乐观锁事务**](https://pingcap.com/zh/blog/best-practice-optimistic-transaction)
+
+* PingCAP Doc, [TiDB 悲观事务模式](https://docs.pingcap.com/zh/tidb/dev/pessimistic-transaction)
+
+* PingCAP, [TiDB 新特性漫谈：悲观事务](https://pingcap.com/zh/blog/pessimistic-transaction-the-new-features-of-tidb)
+
+* PingCAP, [TiDB 4.0 新特性前瞻（二）白话“悲观锁”](https://pingcap.com/zh/blog/tidb-4.0-pessimistic-lock)
+
+* PingCAP, [**TiDB 悲观锁实现原理**](https://tidb.net/blog/7730ed79)
+* PingCAP, [TiKV 源码解析系列文章（十一）Storage - 事务控制层](https://pingcap.com/zh/blog/tikv-source-code-reading-11)
+
+* PingCAP, [TiKV 源码解析系列文章（十二）分布式事务](https://pingcap.com/zh/blog/tikv-source-code-reading-12)
+
+
+
+* [CockroachDB分布式事务解密(一)：CockroachDB & HLC](https://mp.weixin.qq.com/s/ho2McS6yNohEJSqChXmckA), by 百度DBA
+* [CockroachDB分布式事务解密(二)：事务模型](https://mp.weixin.qq.com/s/39hPkoFZonWajhFWE41tVA), by 百度DBA
+* [论文解读：CockroachDB 事务处理](https://zhuanlan.zhihu.com/p/543497168), by [PolarDB-X](https://www.zhihu.com/org/polardb-x) @知乎
+
 
 # 分布式
 
-Spanner - CAP, TrueTime and Transaction: https://pingcap.com/zh/blog/Spanner-cap-truetime-transaction
-
-**一致性模型**: https://segmentfault.com/a/1190000016785044
-
-**线性一致性和 Raft**: https://pingcap.com/zh/blog/linearizability-and-raft
-
-TiKV 功能介绍 - Raft 的优化: https://pingcap.com/zh/blog/optimizing-raft-in-tikv
-
-TiKV 功能介绍 - Lease Read: https://pingcap.com/zh/blog/lease-read
-
-基于 Raft 构建弹性伸缩的存储系统的一些实践: https://pingcap.com/zh/blog/building-distributed-db-with-raft
-
-**TiDB 新特性漫谈：从 Follower Read 说起**: https://pingcap.com/zh/blog/follower-read-the-new-features-of-tidb
-
-中心化还是去中心化？揭秘 TiDB 5.0 事务分布式授时模块: https://pingcap.com/zh/blog/preliminary-study-on-cross-center-deployment-capability-of-tidb5.0
+* PingCAP, [Spanner - CAP, TrueTime and Transaction](https://pingcap.com/zh/blog/Spanner-cap-truetime-transaction)
+* PingCAP, [**线性一致性和 Raft**](https://pingcap.com/zh/blog/linearizability-and-raft)
+* PingCAP, [TiKV 功能介绍 - Raft 的优化](https://pingcap.com/zh/blog/optimizing-raft-in-tikv)
+* PingCAP, [TiKV 功能介绍 - Lease Read](https://pingcap.com/zh/blog/lease-read)
+* PingCAP, [基于 Raft 构建弹性伸缩的存储系统的一些实践](https://pingcap.com/zh/blog/building-distributed-db-with-raft)
+* PingCAP, [**TiDB 新特性漫谈：从 Follower Read 说起**](https://pingcap.com/zh/blog/follower-read-the-new-features-of-tidb)
+* PingCAP, [中心化还是去中心化？揭秘 TiDB 5.0 事务分布式授时模块](https://pingcap.com/zh/blog/preliminary-study-on-cross-center-deployment-capability-of-tidb5.0)
+* [分布式数据库中的一致性与时间戳](https://zhuanlan.zhihu.com/p/360690247), by [PolarDB-X](https://www.zhihu.com/org/polardb-x) @知乎
 
 
 # 存储
@@ -72,18 +81,34 @@ LevelDB/RocksDB
 
 行存/列存
 
-TiKV 是如何存取数据的: https://pingcap.com/zh/blog/how-tikv-store-get-data
+PingCAP, [TiKV 是如何存取数据的](https://pingcap.com/zh/blog/how-tikv-store-get-data)
 
 # 优化器
 
-* Lecture #14: Query Planning & Optimization: https://15445.courses.cs.cmu.edu/fall2022/schedule.html#oct-25-2022
-* Optimizer Implementation (Overview): https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-01-2020
-* Optimizer Implementation (Top-Down vs. Bottom-Up): https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-06-2020
-* Cascades Optimizer: https://zhuanlan.zhihu.com/p/73545345
+* M.A. Soliman, et al., [Orca: A Modular Query Optimizer Architecture for Big Data](https://15721.courses.cs.cmu.edu/spring2020/papers/19-optimizer1/p337-soliman.pdf), in *SIGMOD*, 2014
+* Waas F, Galindo-Legaria C., [Counting, enumerating, and sampling of execution plans in a cost-based query optimizer](https://dl.acm.org/doi/pdf/10.1145/342009.335451), SIGMOD, 2000
+* CMU-15-445/645, [Lecture #14: Query Planning & Optimization](https://15445.courses.cs.cmu.edu/fall2022/schedule.html#oct-25-2022)
+* CMU-15-721, [Optimizer Implementation (Overview)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-01-2020)
+* CMU-15-721, [Optimizer Implementation (Top-Down vs. Bottom-Up)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-06-2020)
+
+
+
+* [Cascades Optimizer](https://zhuanlan.zhihu.com/p/73545345), by [hellocode](https://www.zhihu.com/people/hellocode-ming) @知乎
+* [SQL 查询优化原理与 Volcano Optimizer 介绍](https://zhuanlan.zhihu.com/p/48735419), by [张茄子](https://www.zhihu.com/people/chase-zh) @知乎
+* PingCAP, [TiDB 源码阅读系列文章（七）基于规则的优化](https://cn.pingcap.com/blog/tidb-source-code-reading-7)
+* PingCAP, [TiDB 源码阅读系列文章（二十一）基于规则的优化 II](https://cn.pingcap.com/blog/tidb-source-code-reading-21)
+
+# 执行器
+
+* [三种常见的数据库查询引擎执行模型](https://zhuanlan.zhihu.com/p/349886761), by [Hubble](https://www.zhihu.com/people/hubbleshu-ju-ku) @知乎
+* 数据库内核月报 － 2017 / 01, [PgSQL · 引擎介绍 · 向量化执行引擎简介](http://mysql.taobao.org/monthly/2017/01/06/)
+* [数据库查询引擎的进化之路](https://zhuanlan.zhihu.com/p/41562506), by [OceanBase](https://www.zhihu.com/org/oceanbaseshu-ju-ku) @知乎
 
 
 # DDL
 
-* 理解 Google F1: Schema 变更算法: https://disksing.com/understanding-f1-schema-change/
-
 - 2013, [Online, Asynchronous Schema Change in F1](https://research.google.com/pubs/archive/41376.pdf), VLDB
+
+
+
+- 理解 Google F1: Schema 变更算法: https://disksing.com/understanding-f1-schema-change/
