Saved @ 2023年 2月 7日 星期二 17时00分17秒 CST

--- a/数据库/数据库学习资料.md
+++ b/数据库/数据库学习资料.md
@@ -6,13 +6,13 @@ PingCAP, How do we build TiDB: https://pingcap.com/zh/blog/how-do-we-build-tidb
 
 * 1995, [A Critique of ANSI SQL Isolation Levels](https://www.microsoft.com/en-us/research/wp-content/uploads/2016/02/tr-95-51.pdf), SIGMOD
 * Peng D, Dabek F. [Large-scale incremental processing using distributed transactions and notifications](https://www.usenix.org/legacy/event/osdi10/tech/full_papers/Peng.pdf)[J]. 2010. (Google Percolator)
-* CMU-15-445/645, [Lecture #16: Concurrency Control Theory](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#oct-28-2020)
-* CMU-15-445/645, [Lecture #17: Two-Phase Locking Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-02-2020)
-* CMU-15-445/645, [Lecture #18: Timestamp Ordering Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-04-2020)
-* CMU-15-445/645, [Lecture #19: Multi-Version Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-09-2020)
-* CMU-15-721, [Multi-Version Concurrency Control (Design Decisions)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-22-2020)
-* CMU-15-721, [Multi-Version Concurrency Control (Protocols)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-27-2020)
-* CMU-15-721, [Multi-Version Concurrency Control (Garbage Collection)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-29-2020)
+* CMU-15-445/645(fall 2020), [Lecture #16: Concurrency Control Theory](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#oct-28-2020)
+* CMU-15-445/645(fall 2020), [Lecture #17: Two-Phase Locking Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-02-2020)
+* CMU-15-445/645(fall 2020), [Lecture #18: Timestamp Ordering Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-04-2020)
+* CMU-15-445/645(fall 2020), [Lecture #19: Multi-Version Concurrency Control](https://15445.courses.cs.cmu.edu/fall2020/schedule.html#nov-09-2020)
+* CMU-15-721(spring 2020), [Multi-Version Concurrency Control (Design Decisions)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-22-2020)
+* CMU-15-721(spring 2020), [Multi-Version Concurrency Control (Protocols)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-27-2020)
+* CMU-15-721(spring 2020), [Multi-Version Concurrency Control (Garbage Collection)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#jan-29-2020)
 * [**一致性模型**](https://www.jianshu.com/p/3673e612cce2), [siddontang](https://www.jianshu.com/u/1yJ3ge) @简书
 
 
@@ -87,22 +87,39 @@ PingCAP, [TiKV 是如何存取数据的](https://pingcap.com/zh/blog/how-tikv-st
 
 * M.A. Soliman, et al., [Orca: A Modular Query Optimizer Architecture for Big Data](https://15721.courses.cs.cmu.edu/spring2020/papers/19-optimizer1/p337-soliman.pdf), in *SIGMOD*, 2014
 * Waas F, Galindo-Legaria C., [Counting, enumerating, and sampling of execution plans in a cost-based query optimizer](https://dl.acm.org/doi/pdf/10.1145/342009.335451), SIGMOD, 2000
-* CMU-15-445/645, [Lecture #14: Query Planning & Optimization](https://15445.courses.cs.cmu.edu/fall2022/schedule.html#oct-25-2022)
-* CMU-15-721, [Optimizer Implementation (Overview)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-01-2020)
-* CMU-15-721, [Optimizer Implementation (Top-Down vs. Bottom-Up)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-06-2020)
+* CMU-15-445/645(fall 2022), [Lecture #14: Query Planning & Optimization](https://15445.courses.cs.cmu.edu/fall2022/schedule.html#oct-25-2022)
+* CMU-15-445/645(fall 2019), [Query Planning & Optimization I](https://15445.courses.cs.cmu.edu/fall2019/schedule.html#oct-14-2019)
+* CMU-15-445/645(fall 2019), [Query Planning & Optimization II](https://15445.courses.cs.cmu.edu/fall2019/schedule.html#oct-21-2019)
+* CMU-15-721(spring 2020), [Optimizer Implementation (Overview)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-01-2020)
+* CMU-15-721(spring 2020), [Optimizer Implementation (Top-Down vs. Bottom-Up)](https://15721.courses.cs.cmu.edu/spring2020/schedule.html#apr-06-2020)
 
 
 
 * [Cascades Optimizer](https://zhuanlan.zhihu.com/p/73545345), by [hellocode](https://www.zhihu.com/people/hellocode-ming) @知乎
 * [SQL 查询优化原理与 Volcano Optimizer 介绍](https://zhuanlan.zhihu.com/p/48735419), by [张茄子](https://www.zhihu.com/people/chase-zh) @知乎
+
+
+
 * PingCAP, [TiDB 源码阅读系列文章（七）基于规则的优化](https://cn.pingcap.com/blog/tidb-source-code-reading-7)
 * PingCAP, [TiDB 源码阅读系列文章（二十一）基于规则的优化 II](https://cn.pingcap.com/blog/tidb-source-code-reading-21)
+* [数据库内核杂谈（七）：数据库优化器（上）](https://www.infoq.cn/article/GhhQlV10HWLFQjTTxRtA), by [顾仲贤](https://www.infoq.cn/profile/2E2516A8916716/publish)
+* [数据库内核杂谈（八）：数据库优化器（下）](https://www.infoq.cn/article/JCJyMrGDQHl8osMFQ7ZR), by [顾仲贤](https://www.infoq.cn/article/JCJyMrGDQHl8osMFQ7ZR)
+* [数据库内核杂谈（九）：开源优化器 ORCA](https://www.infoq.cn/article/5o16eHOZ5zk6FzPSJpT2), by [顾仲贤](https://www.infoq.cn/article/JCJyMrGDQHl8osMFQ7ZR)
 
 # 执行器
+
+* CMU-15-445/645(fall 2022), [Lecture #12: Query Execution I](https://15445.courses.cs.cmu.edu/fall2022/schedule.html#oct-06-2022)
+* CMU-15-445/645(fall 2022), [Lecture #13: Query Execution II](https://15445.courses.cs.cmu.edu/fall2022/schedule.html#oct-11-2022)
+
+
 
 * [三种常见的数据库查询引擎执行模型](https://zhuanlan.zhihu.com/p/349886761), by [Hubble](https://www.zhihu.com/people/hubbleshu-ju-ku) @知乎
 * 数据库内核月报 － 2017 / 01, [PgSQL · 引擎介绍 · 向量化执行引擎简介](http://mysql.taobao.org/monthly/2017/01/06/)
 * [数据库查询引擎的进化之路](https://zhuanlan.zhihu.com/p/41562506), by [OceanBase](https://www.zhihu.com/org/oceanbaseshu-ju-ku) @知乎
+
+
+
+* [数据库内核杂谈（五）：如何实现排序和聚合](https://www.infoq.cn/article/czK9lVhe0N42JOd6tHjc), by [顾仲贤](https://www.infoq.cn/article/JCJyMrGDQHl8osMFQ7ZR)
 
 
 # DDL
