Saved 2023年 3月 4日 星期六 23时18分14秒 CST

--- a/数据库/事务/[转载] 事务并发控制.md
+++ b/数据库/事务/[转载] 事务并发控制.md
@@ -89,7 +89,7 @@ MVCC 通过一个快照去读取相同的数据是一个很理想的想法，但
 
 > **TIPS**:
 >
-> 1. 这里所说的 TiDB 的解决方法应该只是在支持 [Async Commit](https://cn.pingcap.com/blog/async-commit-principle) 之后才需要的，因为在此之前 TiDB 的 commit_ts 是从 TSO 上取的，TSO 天然保证了取到的 timestamp 一定比当前所有的读 timestamp 要大，没有这个问题。(参考 https://asktug.com/t/topic/693814)（另外如果是 HLC 的实现，是需要解决这个问题的）
+> 1. 这里所说的 TiDB 的解决方法应该只是在支持 [Async Commit](https://cn.pingcap.com/blog/async-commit-principle) 之后才需要的，因为在此之前 TiDB 的 commit_ts 是从 TSO 上取的，TSO 天然保证了取到的 timestamp 一定比当前所有的读 timestamp 要大，没有这个问题。(参考 https://asktug.com/t/topic/693814)（另外如果是基于 HLC 的实现，是需要解决这个问题的）
 > 2. "Percolator 提交协议下，predicate 读对于尚未存在的数据是如何防止幻读的"：Percolator 在 prepare 时会加锁，因此上图中第一次读会阻塞，不会出现幻读的情况。
 
 <img src="https://littleneko.oss-cn-beijing.aliyuncs.com/img/10_e2e41fa92c.png" alt="10.png" style="zoom:50%;" />
